# pre-commit-hugo

./: .pre-commit-hooks.yaml  Readme.adoc  setup.cfg
pre_commit_hugo/: main.py
