# setup.cfg
[metadata]
name = pre-commit-hugo
description = Pre-commit hook for Hugo
version = 0.1.0
author = Jérôme Marchand
author_email = jerome.marchand@zenika.commit
license = MIT

[options]
packages = find:
install_requires =
    tomli
    ruamel.yaml

[options.entry_points]
console_scripts =
    check-front-matter = pre_commit_hugo.main:main
